fix card images getting cut off

--- a/src/apps/experimental/components/media/MediaCard.module.scss
+++ b/src/apps/experimental/components/media/MediaCard.module.scss
@@ -9,7 +9,6 @@
 .card {
     position: relative;
     cursor: pointer;
-    overflow: hidden;
     transition: all 200ms ease;
 
     &:hover {
